--- a/MusicRecommendationSystem.ipynb
+++ b/MusicRecommendationSystem.ipynb
@@ -60,8 +60,8 @@
         "import base64\n",
         "\n",
         "# Replace with Client ID and Client Secret (Spotify Developer's Dashboard)\n",
-        "CLIENT_ID = '4234c12fa1db4876b02a6e43412f7ef0'\n",
-        "CLIENT_SECRET = 'eaeb78cf66074bb5957407436babd69e'\n",
+        "CLIENT_ID = '42***********ef0'\n",
+        "CLIENT_SECRET = 'ea***********9e'\n",
         "\n",
         "client_credentials = f\"{CLIENT_ID}:{CLIENT_SECRET}\"\n",
         "client_credentials_base64 = base64.b64encode(client_credentials.encode())\n",
